fix: wrap form field in a content

--- a/packages/components/src/FormField/FormField.css
+++ b/packages/components/src/FormField/FormField.css
@@ -277,7 +277,3 @@
 .miniLabel:not(.small) .affixLabel {
   padding-top: calc(var(--field--padding-top) - 2px);
 }
-
-.description {
-  margin-top: var(--space-smaller);
-}
